assignment 7: fixed image-to-image search

--- a/Assignment_7/ChromeExtension/searcher/popup.html
+++ b/Assignment_7/ChromeExtension/searcher/popup.html
@@ -1,24 +1,153 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Search Query</title>
+  <meta charset="UTF-8">
+  <title>Memory Search</title>
   <style>
-    body {
-      font-family: sans-serif;
-      width: 200px;
-      padding: 10px;
+    * {
+      box-sizing: border-box;
     }
-    input, button {
+
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #ffe4ec, #e0f7fa);
+      width: 240px;
+      padding: 20px;
+      border-radius: 16px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+      transition: all 0.3s ease;
+    }
+
+    h2 {
+      text-align: center;
+      color: #333;
+      margin-bottom: 15px;
+      font-size: 1.2rem;
+    }
+
+    input[type="text"] {
       width: 100%;
-      margin-top: 5px;
+      padding: 10px;
+      margin-bottom: 10px;
+      border: none;
+      border-radius: 12px;
+      box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.05);
+      font-size: 0.95rem;
+    }
+
+    button {
+      width: 100%;
+      padding: 10px;
+      margin-top: 6px;
+      border: none;
+      border-radius: 12px;
+      font-size: 0.95rem;
+      cursor: pointer;
+      transition: background 0.3s ease, transform 0.2s ease;
+    }
+
+    #searchTextButton {
+      background-color: #a2d2ff;
+      color: #003049;
+    }
+
+    #searchImageButton {
+      background-color: #ffc8dd;
+      color: #6a040f;
+    }
+
+    /* New styles for the Upload & Search button */
+    #uploadImageButton {
+      background-color: #ffb3d9;
+      color: #6a040f;
+      font-weight: bold;
+    }
+
+    /* Hover effects for buttons */
+    button:hover {
+      transform: translateY(-2px);
+      opacity: 0.9;
+    }
+
+    button:active {
+      transform: scale(0.98);
+    }
+
+    /* Styles for the image upload input field */
+    #imageInput {
+      width: 100%;
+      padding: 8px;
+      margin-bottom: 12px;
+      border: 2px dashed #ffb3d9;
+      border-radius: 10px;
+      background-color: #fdfdfd;
+      cursor: pointer;
+      transition: all 0.3s ease;
+    }
+
+    /* Adding hover effect to the image input */
+    #imageInput:hover {
+      border-color: #ff7f9f;
+    }
+
+    /* Loader styling */
+    #loader {
+      display: none;
+      text-align: center;
+      margin-top: 10px;
+      font-size: 0.9rem;
+      color: #555;
+    }
+
+    /* Cute OR text styling */
+    .or-text {
+      text-align: center;
+      margin: 12px 0;
+      font-size: 1.2rem;
+      font-weight: bold;
+      color: #ff7f9f;
+      font-style: italic;
+      letter-spacing: 1px;
+      position: relative;
+    }
+
+    /* Create a little line across the OR text */
+    .or-text::before,
+    .or-text::after {
+      content: '';
+      position: absolute;
+      top: 50%;
+      width: 40%;
+      height: 1px;
+      background-color: #ff7f9f;
+    }
+
+    .or-text::before {
+      left: 0;
+    }
+
+    .or-text::after {
+      right: 0;
     }
   </style>
 </head>
 <body>
-  <input type="text" id="queryInput" placeholder="Type your query..." />
+  <h2>🔍 Smart Search</h2>
+  <input type="text" id="queryInput" placeholder="What do you remember?" />
   <button id="searchTextButton">Search Text</button>
   <button id="searchImageButton">Search Image</button>
-  
+
+  <!-- Cute OR text separator -->
+  <div class="or-text">OR</div>
+
+  <!-- Image upload section -->
+  <input type="file" id="imageInput" accept="image/*" />
+  <button id="uploadImageButton">Upload & Search</button>
+
+  <div id="loader" style="display:none; text-align:center; margin-top:10px; font-size:0.9rem; color:#555;">
+    ⏳ Searching memory...
+  </div>
+
   <script src="popup.js"></script>
 </body>
 </html>
